--- a/.gitignore
+++ b/.gitignore
@@ -1,75 +1,41 @@
-# OSX
-#
-.DS_Store
-
-# Xcode
-#
-build/
-*.pbxuser
-!default.pbxuser
-*.mode1v3
-!default.mode1v3
-*.mode2v3
-!default.mode2v3
-*.perspectivev3
-!default.perspectivev3
-xcuserdata
-*.xccheckout
-*.moved-aside
-DerivedData
-*.hmap
-*.ipa
-*.xcuserstate
-**/.xcode.env.local
-
-# Android/IntelliJ
-#
-build/
-.idea
-.gradle
-local.properties
-*.iml
-*.hprof
-.cxx/
-*.keystore
-!debug.keystore
-.kotlin/
-
-# node.js
-#
+# Node.js dependencies
 node_modules/
-npm-debug.log
+npm-debug.log*
 yarn-error.log
+package-lock.json
+yarn.lock
 
-# fastlane
-#
-# It is recommended to not store the screenshots in the git repo. Instead, use fastlane to re-generate the
-# screenshots whenever they are needed.
-# For more information about the recommended setup visit:
-# https://docs.fastlane.tools/best-practices/source-control/
+# React Native Android build files
+android/.gradle/
+android/app/build/
+android/build/
 
-**/fastlane/report.xml
-**/fastlane/Preview.html
-**/fastlane/screenshots
-**/fastlane/test_output
+# React Native iOS build files
+ios/Pods/
+ios/build/
+ios/*.xcodeproj/project.xcworkspace/
+ios/*.xcodeproj/xcuserdata/
+ios/*.xcodeproj/xcshareddata/
+ios/*.xcodeproj/*.pbxuser
 
-# Bundle artifact
-*.jsbundle
+# Temporary files
+*.log
+*.tmp
+*.swp
+*.swo
+*.swn
 
-# Ruby / CocoaPods
-**/Pods/
-/vendor/bundle/
+# Metro bundler cache
+.expo/
+.expo-shared/
+metro-cache/
+dist/
 
-# Temporary files created by Metro to check the health of the file watcher
-.metro-health-check*
-
-# testing
-/coverage
-
-# Yarn
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/sdks
-!.yarn/versions
+# Miscellaneous
+.DS_Store
+Thumbs.db
+.env
+.env.local
+.env.development
+.env.production
+.env.test
